# MiniCPM-V-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: e2e-mac-acceptance-template.md  v1-acceptance-checklist.md
docs/plans/: 2026-05-13-minicpm-v-local-implementation.md
docs/specs/: 2026-05-13-minicpm-v-local-design.md
scripts/: cleanup.sh
skill/: SKILL.md  install.sh
skill/scripts/: run.sh
src/minicpm_v_local/: __init__.py  __main__.py  cli.py  client.py  config.py  doctor.py  download.py  paths.py
src/minicpm_v_local/pipeline/: image.py  video.py
src/minicpm_v_local/runtime/: backend.py  cpu.py  cuda.py  detect.py  factory.py  mlx.py
src/minicpm_v_local/server/: isolation.py  manager.py  state.py  watchdog.py
tests/integration/: test_end_to_end_cpu.py  test_lifecycle.py
tests/unit/: test_cli.py  test_client.py  test_config.py  test_doctor.py  test_download.py  test_paths.py  test_smoke.py
tests/unit/pipeline/: test_image.py  test_video.py
tests/unit/runtime/: test_backend.py  test_cpu.py  test_cuda.py  test_detect.py  test_mlx.py
tests/unit/server/: test_isolation.py  test_manager.py  test_state.py  test_watchdog.py
