[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicpm-v-local"
version = "0.1.0"
description = "Local visual preprocessor using MiniCPM-V 4.6 across MLX/CUDA/CPU backends."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "MiniCPM-V Local"}]
keywords = ["mllm", "vision-language", "mlx", "vllm", "llama.cpp", "claude-code", "skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "huggingface_hub>=0.24",
  "httpx>=0.27",
  "pillow>=10",
  "numpy>=1.26",
]

[project.optional-dependencies]
mlx = ["mlx-vlm>=0.1"]
cuda = ["vllm>=0.6"]
cpu = []
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-mock>=3.12",
  "ruff>=0.5",
]

[project.scripts]
minicpm-v = "minicpm_v_local.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: integration tests requiring subprocess / network",
]

[tool.coverage.run]
source = ["src/minicpm_v_local"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
