[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicpm-v-local"
version = "0.1.0"
description = "Local visual preprocessor using MiniCPM-V 4.6 across MLX/CUDA/CPU backends."
authors = [{name = "Owner"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=0.24",
  "httpx>=0.27",
  "tomli;python_version<'3.11'",
  "pillow>=10",
  "numpy>=1.26",
]

[project.optional-dependencies]
mlx = ["mlx-vlm>=0.1"]
cuda = ["vllm>=0.6"]
cpu = []                       # llama-server 走系统二进制
dev = ["pytest>=8", "pytest-cov>=5", "pytest-mock>=3.12", "ruff>=0.5"]

[project.scripts]
minicpm-v = "minicpm_v_local.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
